# ot-harjoitustyo

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: .$Untitled Diagram.bkp  arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .pyproject.toml.swp
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py
src/repositories/: train_repository.py
src/services/: train_service.py
src/tests/: request.http  train_number_test.py
src/ui/: results_view.py  search_view.py  test_view.py  train_info.py  ui.py
